# pythonik

./: .gitignore  .gitlab-ci.yml  .windsurfrules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  remove_trailing_spaces.sh  requirements.txt  setup.py
.github/workflows/: create-release.yml  publish.yml  test.yml  version-check.yml
docs/: ADVANCED_USAGE.md  API_REFERENCE.md  CHANGELOG.md  DELETE.md  METADATA.md  RELEASE_HOW_TO.md  TROUBLESHOOTING.md
pythonik/: _logger.py  client.py  constants.py
pythonik/models/: __init__.py  acls.py  assets.py  auth.py  automations.py  base.py  notifications.py  settings.py  stats.py  transcode.py  users.py  users_notifications.py
pythonik/models/assets/: assets.py  collections.py  segments.py
pythonik/models/files/: file.py  format.py  keyframe.py  proxy.py  storage.py
pythonik/models/jobs/: job_body.py  job_response.py
pythonik/models/metadata/: __init__.py  fields.py  view_responses.py  (+1 more)
pythonik/specs/: _internal_utils.py  acls.py  assets.py  auth.py  automations.py  base.py  collection.py  collections.py  files.py  jobs.py  metadata.py  notifications.py  search.py  settings.py  stats.py  transcode.py  users.py  users_notifications.py
pythonik/tests/: test_acls.py  test_assets.py  test_assets_history.py  test_auth.py  test_base_spec_logging.py  test_base_url.py  test_files.py  test_files_extensions.py  test_imports.py  test_internal_utils.py  test_jobs.py  test_logger.py  test_logger_integration.py  test_metadata.py  test_pagination.py  test_search.py  test_transcode.py
pythonik/utils/: pagination.py
(+3 files in other folders)
