[tool.poetry]
name = "pythonik"
version = "0.1.0"
description = "Python SDK for Iconik's API"
authors = ["brant <brant@northshoreautomation.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.4.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.16.1"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
